--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,7 +20,7 @@ phases:
         - $(aws ecr get-login --no-include-email)
         - export KUBECONFIG=$HOME/.kube/config
         - pip3 install -r requirements.txt
-        - python3 test_mail.py
+        - python3 test_main.py
         
         
   build:
